crates/test-files/fixtures/compile_errors/duplicate_contract_in_module.fe
contract Foo:

    pub fn bar():
        pass

contract Foo:

    pub fn bar():
        pass
